<resources>
    <string name="app_name">MandelaMoney</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">PASSWORD</string>
    <string name="email_password_invalid"><![CDATA[Email & Password Invalid]]></string>
    <string name="todo">TODO</string>
    <string name="email">EMAIL</string>
    <string name="mandela_money_logo">Mandela Money Logo</string>
    <string name="view_hide">View/Hide</string>
    <string name="withdraw">Withdraw  ></string>
    <string name="pay_now">Pay Now</string>
    <string name="request_pay">Request Pay</string>
    <string name="available_balance">Available Balance</string>
    <string name="transaction_history">Transaction History  ></string>
    <string name="transaction_history_th">Transaction History</string>
    <string name="recover">Recover</string>
    <string name="recover_account">Recover Account</string>
    <string name="recover_account_message">Check your email inbox for your recovery code.</string>
    <string name="code">CODE</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_CAPS">CONFIRM</string>
    <string name="passwords_do_not_match_error"><![CDATA[Passwords do not match.]]></string>
    <string name="minimum_8_characters"><![CDATA[Please enter a minimum of 8 characters.]]></string>
    <string name="invalid_recovery_code"><![CDATA[Invalid Recovery Code]]></string>
    <string name="business">business</string>
    <string name="student">student</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="password_too_short">Password too Short (min 8 char)</string>
    <string name="email_already_in_use">Email Already in Use</string>
    <string name="invalid_student_number">Invalid Student Number</string>
    <string name="enter_an_email">Enter an Email</string>
    <string name="enter_a_student_number">Enter a Student Number</string>
    <string name="enter_a_first_name">Enter a First Name</string>
    <string name="enter_a_last_name">Enter a Last Name</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="enter_a_business_name">Enter a Business Name</string>
    <string name="enter_a_vat_number">Enter a VAT Number</string>
    <string name="invalid_vat_number">Invalid VAT Number</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="enter_a_phone_number">Enter a Phone Number</string>
    <string name="request_payment">Request Payment</string>
    <string name="generate_qr">Generate QR</string>
    <string name="cancel">Cancel</string>
    <string name="amount">AMOUNT</string>
    <string name="close">Close</string>
    <string name="success">Success</string>
    <string name="mandela_money">Mandela Money</string>
    <string name="to..">To:</string>
    <string name="from..">From:</string>
    <string name="amount..">Amount:</string>
    <string name="failed">Failed</string>
    <string name="enter_a_valid_amount">Enter a Valid Amount</string>
    <string name="enter_a_positive_amount">Enter a Positive Amount</string>
    <string name="qr_instruction">The payee, must select pay and scan the QR code below.</string>
    <string name="could_not_create_transaction">Error. Could not create transaction.</string>
    <string name="could_not_generate_qr">Error: Could not generate QR code.</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="make_paymet">MAKE PAYMENT</string>
    <string name="scan_mandela_money_qr">Scan a Mandela Money QR</string>
    <string name="scan">SCAN</string>
    <string name="create_account">Create Account</string>
    <string name="student_number">Student Number</string>
    <string name="student_number_CAPS">STUDENT NUMBER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="lock">Lock</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="period">PERIOD</string>
    <string name="type">TYPE</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawals</string>
    <string name="all">All</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_year">Last Year</string>
    <string name="withdraw_wo">Withdraw</string>
    <string name="unlock">UNLOCK</string>
    <string name="logout">LOG OUT</string>
    <string name="biometrics">Biometrics</string>
    <string name="unlock_app">UNLOCK APP\n</string>
    <string name="or">OR</string>"
    <string name="today">Today</string>"
    <string name="invalid_password">Invalid Password</string>
    <string name="forgot_password_message">Enter your email to begin recovery.</string>
    <string name="your_profile">Your Profile</string>
    <string name="first_name_">First Name:</string>
    <string name="last_name_">Last Name:</string>
    <string name="email_">Email:</string>
    <string name="student_number_">Student Number:</string>
    <string name="balance_">Balance:</string>
    <string name="options">Options</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Logout</string>
    <string name="business_name_">Business Name:</string>
    <string name="vat_number_">VAT Number:</string>
    <string name="phone_number_">Phone Number:</string>
    <string name="reset_password_message">Enter a new secure password.</string>
    <string name="invalid_deposit_funds">One of the fields are empty or invalid.</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="name">NAME</string>
    <string name="expiry_date">EXPIRY DATE</string>
    <string name="cvv">CVV</string>
    <string name="deposit_funds">DEPOSIT FUNDS</string>
    <string name="bank_name">BANK NAME</string>
    <string name="branch_code">BRANCH CODE</string>
    <string name="enter_amount">Please enter an amount.</string>
    <string name="invalid_amount">Please enter a valid amount greater that 0.</string>
    <string name="enter_bank_name">"Please enter a bank name. "</string>
    <string name="invalid_bank_name">Please enter a supported bank (e.g.ABSA,FNB).</string>
    <string name="enter_branch_code">Please enter the 6-digit branch code.</string>
    <string name="invalid_branch_code">Please enter a 6-digit valid branch code.</string>
    <string name="enter_card_number">Please enter a card number.</string>
    <string name="invalid_card_number">Please enter a valid 6–16 digit card number.</string>
    <string name="enter_name">Please enter a name.</string>
    <string name="invalid_name">Name can only contain letters, spaces, - or \'.</string>
    <string name="enter_expiry_date">Please enter the card’s expiry date (MM/YY).</string>
    <string name="invalid_expiry_date">Use MM/YY and ensure the date is valid.</string>
    <string name="enter_cvv">"Please enter a CVV. "</string>
    <string name="invalid_cvv">CVV must be 3 or 4 digits.</string>
    <string name="deposit_funds_failed">An error occurred when attempting to deposit funds.</string>
    <string name="session_expired">User session expired. Please log in again.</string>
    <string name="deposit_created">Deposit created and marked as pending.</string>
    <string name="deposit_created_with_id">Deposit created (Transaction ID: %1$d) and marked as pending.</string>
    <string name="deposit_failed_try_again">Deposit failed. Please try again.</string>
    <string name="bank_account_meta_mismatch">Bank account exists with different details. Using saved account info.\n</string>
    <string name="confirm_deposit">Confirm Deposit</string>
    <string name="bank_account">Bank Account</string>
    <string name="account_number">ACCOUNT NUMBER</string>
    <string name="cardholder_name_fallback">Account Holder</string>
    <string name="account_holder">ACCOUNT HOLDER</string>
    <string name="withdraw_funds">WITHDRAW FUNDS</string>
    <string name="withdraw_failed_try_again">Withdrawal failed. Please try again.</string>
    <string name="confirm_withdraw">CONFIRM WITHDRAWAL</string>
    <string name="insufficient_funds">Insufficient Funds</string>
    <string name="save">Save</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="incorrect_password_error">Incorrect Password</string>
    <string name="incorrect_email_and_password_combination"><![CDATA[Incorrect Email & Password]]></string>
    <string name="unknown_error_occurred">Unknown Error Occurred</string>
    <string name="deposits">Deposits</string>
</resources>