<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mandelaBlue"
    tools:context="view.activity.ForgotPasswordActivity">

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView_forgot_password"
        style="@style/BlurPanel"
        android:layout_width="0dp"
        android:layout_height="327dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="21dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password">

                <ImageView
                    android:id="@+id/img_email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/img_email_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/tbx_email_login_forgot_password"
                    style="@style/TextBox"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:autofillHints="@string/email"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:paddingHorizontal="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextFields" />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/forgot_password"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/txt_error_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invalid_email"
                android:textColor="@color/mandelaYellow"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
                app:layout_constraintVertical_bias="0.15" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </eightbitlab.com.blurview.BlurView>

    <ImageView
        android:id="@+id/img_mandelamoney_forgot_password"
        android:layout_width="375dp"
        android:layout_height="104dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/blurView_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/img_mandelamoney_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_recover"
        style="@style/PrimaryButton"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginTop="-21dp"
        android:text="@string/recover"
        app:layout_constraintEnd_toEndOf="@+id/blurView_forgot_password"
        app:layout_constraintStart_toStartOf="@+id/blurView_forgot_password"
        app:layout_constraintTop_toBottomOf="@id/blurView_forgot_password" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="105dp"
        android:layout_marginBottom="-90dp"
        android:contentDescription="@string/mandela_money_logo"
        app:layout_constraintBottom_toTopOf="@+id/blurView_forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_mandelamoney_forgot_password"
        app:srcCompat="@drawable/img_mandelamoneylogo" />

    <TextView
        android:id="@+id/btn_cancel_forgot_password"
        style="@style/HyperLinkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/blurView_forgot_password"
        app:layout_constraintStart_toStartOf="@+id/blurView_forgot_password"
        app:layout_constraintTop_toBottomOf="@+id/btn_recover"
        app:layout_constraintVertical_bias="0.19999999" />

</androidx.constraintlayout.widget.ConstraintLayout>
