<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mandelaBlue"
    tools:context="view.activity.LoginActivity">

    <eightbitlab.com.blurview.BlurView
        android:id="@+id/blurView_createaccountstudent"
        style="@style/BlurPanel"
        android:layout_width="0dp"
        android:layout_height="431dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_password_error_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_a_password"
                android:textColor="@color/mandelaYellow"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout_password_login"
                app:layout_constraintVertical_bias="0.050000012" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.333">

                <ImageView
                    android:id="@+id/img_email_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/img_email_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/tbx_email_login"
                    style="@style/TextBox"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:autofillHints="@string/email"
                    android:ellipsize="end"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:paddingHorizontal="40dp"
                    android:singleLine="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="TextFields" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.666">

                <EditText
                    android:id="@+id/tbx_password_login"
                    style="@style/TextBox"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:paddingHorizontal="40dp"
                    android:autofillHints="@string/password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/img_password_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/view_hide"
                    android:src="@drawable/img_password_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tbx_password_login"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tbx_password_login"
                    app:layout_constraintTop_toTopOf="@+id/tbx_password_login" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/btn_forgotPassword_login"
                style="@style/HyperLinkButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/white60"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_password_error_login"
                app:layout_constraintVertical_bias="0.19999999" />

            <TextView
                android:id="@+id/txt_error_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_email_and_password_combination"
                android:textColor="@color/mandelaYellow"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_forgotPassword_login"
                app:layout_constraintVertical_bias="0.19999999" />

            <TextView
                android:id="@+id/txt_email_error_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invalid_email"
                android:textColor="@color/mandelaYellow"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout_password_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
                app:layout_constraintVertical_bias="0.050000012" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </eightbitlab.com.blurview.BlurView>

    <ImageView
        android:id="@+id/img_mandelamoney_login"
        android:layout_width="375dp"
        android:layout_height="104dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/blurView_createaccountstudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_mandelamoney_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/PrimaryButton"
        android:layout_width="167dp"
        android:layout_height="43dp"
        android:layout_marginTop="-21.5dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/blurView_createaccountstudent"
        app:layout_constraintStart_toStartOf="@+id/blurView_createaccountstudent"
        app:layout_constraintTop_toBottomOf="@id/blurView_createaccountstudent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="105dp"
        android:layout_marginBottom="-55dp"
        android:contentDescription="@string/mandela_money_logo"
        app:layout_constraintBottom_toTopOf="@+id/blurView_createaccountstudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img_mandelamoneylogo" />

    <TextView
        android:id="@+id/btn_signup_login"
        style="@style/HyperLinkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/blurView_createaccountstudent"
        app:layout_constraintStart_toStartOf="@+id/blurView_createaccountstudent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        android:textAllCaps="true"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_loading_spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="999dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <View
            style="@style/DimLoadingScreen"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@android:color/white"
            android:elevation="999dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
